force-app/main/default/objects/Case/fields/Additional_Communication_Method__c.field-meta.xml
<CustomField>
    <fullName>Additional_Communication_Method__c</fullName>
    <inlineHelpText>Between the initial contact and the sending of information, did you communicate with the individual in another way?</inlineHelpText>
    <label>Additional Communication Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>phone</fullName>
            </value>
            <value>
                <fullName>email</fullName>
            </value>
            <value>
                <fullName>in person</fullName>
            </value>
            <value>
                <fullName>text</fullName>
            </value>
            <value>
                <fullName>chat</fullName>
            </value>
            <value>
                <fullName>mail</fullName>
            </value>
            <value>
                <fullName>n/a</fullName>
                <isActive>false</isActive>
                <label>n/a</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>