force-app/main/default/objects/Case/fields/ADL_s__c.field-meta.xml
<CustomField>
    <fullName>ADL_s__c</fullName>
    <label>ADL&apos;s</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Discussed</fullName>
                <default>true</default>
                <label>Not Discussed</label>
            </value>
            <value>
                <fullName>None Reported</fullName>
            </value>
            <value>
                <fullName>Basic Self Care</fullName>
            </value>
            <value>
                <fullName>Home Safety</fullName>
            </value>
            <value>
                <fullName>Money Management</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>