force-app/main/default/objects/Case/fields/Adult_mTBI_Flyers__c.field-meta.xml
<CustomField>
    <fullName>Adult_mTBI_Flyers__c</fullName>
    <inlineHelpText>Taking Care of Yourself After Your Head&apos;s Been Hurt</inlineHelpText>
    <label>Adult mTBI Flyers</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>