force-app/main/default/objects/Case/fields/Barriers_to_Follow_Through__c.field-meta.xml
<CustomField>
    <fullName>Barriers_to_Follow_Through__c</fullName>
    <label>Barriers to Follow Through</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>Financial</fullName>
            </value>
            <value>
                <fullName>No support system</fullName>
            </value>
            <value>
                <fullName>Poor support system</fullName>
            </value>
            <value>
                <fullName>Transportation</fullName>
            </value>
            <value>
                <fullName>Cognitive issues</fullName>
            </value>
            <value>
                <fullName>Other health issues</fullName>
            </value>
            <value>
                <fullName>Waitlist</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>