force-app/main/default/objects/Case/fields/Basic_BI_Info__c.field-meta.xml
<CustomField>
    <fullName>Basic_BI_Info__c</fullName>
    <label>Basic BI Info</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>