force-app/main/default/objects/Case/fields/Behavior_and_BI__c.field-meta.xml
<CustomField>
    <fullName>Behavior_and_BI__c</fullName>
    <inlineHelpText>10 Things You Should Know About Behavior and Brain Injury</inlineHelpText>
    <label>Behavior and BI</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>