force-app/main/default/objects/Case/fields/Behavioral__c.field-meta.xml
<CustomField>
    <fullName>Behavioral__c</fullName>
    <label>Behavioral</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Discussed</fullName>
                <default>true</default>
                <label>Not Discussed</label>
            </value>
            <value>
                <fullName>None Reported</fullName>
            </value>
            <value>
                <fullName>Anger</fullName>
            </value>
            <value>
                <fullName>Impulsiveness</fullName>
            </value>
            <value>
                <fullName>Mood swings/emotional lability</fullName>
            </value>
            <value>
                <fullName>Sexually Inappropriate</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>