force-app/main/default/objects/Case/fields/BIAV_Brochures__c.field-meta.xml
<CustomField>
    <fullName>BIAV_Brochures__c</fullName>
    <label>BIAV Brochures</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>