force-app/main/default/objects/Case/fields/Call_Status__c.field-meta.xml
<CustomField>
    <fullName>Call_Status__c</fullName>
    <label>Type of Call</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Initial IRFA Phone Call</fullName>
            </value>
            <value>
                <fullName>First Follow Up Call</fullName>
            </value>
            <value>
                <fullName>Second Follow Up Call</fullName>
            </value>
            <value>
                <fullName>Follow Up Not Required</fullName>
            </value>
            <value>
                <fullName>Follow Up Declined</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>