force-app/main/default/objects/Case/fields/Caller__c.field-meta.xml
<CustomField>
    <fullName>Caller__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>When a case is related to someone other than the caller</description>
    <inlineHelpText>When a case is related to someone other than the caller</inlineHelpText>
    <label>Caller</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>