force-app/main/default/objects/Case/fields/Cognitive_Deficit__c.field-meta.xml
<CustomField>
    <fullName>Cognitive_Deficit__c</fullName>
    <label>Cognitive Deficit</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Discussed</fullName>
                <default>true</default>
                <label>Not Discussed</label>
            </value>
            <value>
                <fullName>None Reported</fullName>
            </value>
            <value>
                <fullName>Concentration/Attention</fullName>
            </value>
            <value>
                <fullName>Confusion</fullName>
            </value>
            <value>
                <fullName>Disoriented</fullName>
            </value>
            <value>
                <fullName>Follow-through</fullName>
            </value>
            <value>
                <fullName>Memory</fullName>
            </value>
            <value>
                <fullName>Poor Initiation</fullName>
            </value>
            <value>
                <fullName>Reasoning/Decision-Making</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Impulsivity</fullName>
                <isActive>false</isActive>
                <label>Impulsivity</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>