force-app/main/default/objects/Case/fields/Communication__c.field-meta.xml
<CustomField>
    <fullName>Communication__c</fullName>
    <label>Communication</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Discussed</fullName>
                <default>true</default>
                <label>Not Discussed</label>
            </value>
            <value>
                <fullName>None Reported</fullName>
            </value>
            <value>
                <fullName>Expression</fullName>
            </value>
            <value>
                <fullName>Comprehension</fullName>
            </value>
            <value>
                <fullName>Delayed processing</fullName>
            </value>
            <value>
                <fullName>Hearing loss</fullName>
            </value>
            <value>
                <fullName>Assistive Devices</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>