force-app/main/default/objects/Case/fields/Community_Supports_Barriers__c.field-meta.xml
<CustomField>
    <fullName>Community_Supports_Barriers__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Community Supports Barriers</label>
    <type>Checkbox</type>
</CustomField>