force-app/main/default/objects/Case/fields/Community_Supports_Not_Discussed__c.field-meta.xml
<CustomField>
    <fullName>Community_Supports_Not_Discussed__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Community Supports Not Discussed</label>
    <type>Checkbox</type>
</CustomField>