force-app/main/default/objects/Case/fields/Contact_Date__c.field-meta.xml
<CustomField>
    <fullName>Contact_Date__c</fullName>
    <description>Use this field to enter the initial date of contact with the individual, regardless of whether you connected with the individual or not</description>
    <inlineHelpText>Use this field to enter the initial date of contact with the individual, regardless of whether you connected with the individual or not.</inlineHelpText>
    <label>Contact Date</label>
    <type>Date</type>
</CustomField>