force-app/main/default/objects/Case/fields/Date_information_sent__c.field-meta.xml
<CustomField>
    <fullName>Date_information_sent__c</fullName>
    <label>Date information sent</label>
    <type>Date</type>
</CustomField>