force-app/main/default/objects/Case/fields/Date_of_Injury__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Injury__c</fullName>
    <label>Date of Injury</label>
    <type>Date</type>
</CustomField>