force-app/main/default/objects/Case/fields/Describe_Notable_Cases__c.field-meta.xml
<CustomField>
    <fullName>Describe_Notable_Cases__c</fullName>
    <label>Describe Notable Cases</label>
    <type>TextArea</type>
</CustomField>