force-app/main/default/objects/Case/fields/DV_and_BI_Tip_Card__c.field-meta.xml
<CustomField>
    <fullName>DV_and_BI_Tip_Card__c</fullName>
    <inlineHelpText>Domestic Violence and Brain Injury Tip Card</inlineHelpText>
    <label>DV and BI Tip Card</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>