force-app/main/default/objects/Case/fields/DV_and_BI_Tip_Card_Spanish__c.field-meta.xml
<CustomField>
    <fullName>DV_and_BI_Tip_Card_Spanish__c</fullName>
    <inlineHelpText>Domestic Violence and Brain Injury Tip Card in Spanish</inlineHelpText>
    <label>DV and BI Tip Card- Spanish</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>