force-app/main/default/objects/Case/fields/Education__c.field-meta.xml
<CustomField>
    <fullName>Education__c</fullName>
    <label>Education</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Discussed</fullName>
                <default>true</default>
                <label>Not Discussed</label>
            </value>
            <value>
                <fullName>None Reported</fullName>
            </value>
            <value>
                <fullName>Accommodations</fullName>
            </value>
            <value>
                <fullName>IEP</fullName>
            </value>
            <value>
                <fullName>Transition</fullName>
            </value>
            <value>
                <fullName>504 Plan</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>