force-app/main/default/objects/Case/fields/Fall_Prevention_Tips__c.field-meta.xml
<CustomField>
    <fullName>Fall_Prevention_Tips__c</fullName>
    <label>Fall Prevention Tips</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>