force-app/main/default/objects/Case/fields/Financial__c.field-meta.xml
<CustomField>
    <fullName>Financial__c</fullName>
    <label>Financial</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Discussed</fullName>
                <default>true</default>
                <label>Not Discussed</label>
            </value>
            <value>
                <fullName>None Reported</fullName>
            </value>
            <value>
                <fullName>Disability (Short-term)</fullName>
            </value>
            <value>
                <fullName>Disability (Long-term)</fullName>
            </value>
            <value>
                <fullName>Employed (Full-time)</fullName>
            </value>
            <value>
                <fullName>Employed (Part-time)</fullName>
            </value>
            <value>
                <fullName>Unemployed</fullName>
            </value>
            <value>
                <fullName>Familial Support</fullName>
            </value>
            <value>
                <fullName>Military Pension</fullName>
            </value>
            <value>
                <fullName>Social Security Retirement</fullName>
            </value>
            <value>
                <fullName>SSDI/SSI</fullName>
            </value>
            <value>
                <fullName>Worker&apos;s Comp</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>