force-app/main/default/objects/Case/fields/Financial_Barriers__c.field-meta.xml
<CustomField>
    <fullName>Financial_Barriers__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Financial Barriers</label>
    <type>Checkbox</type>
</CustomField>