force-app/main/default/objects/Case/fields/Financial_Not_Discussed__c.field-meta.xml
<CustomField>
    <fullName>Financial_Not_Discussed__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Financial Not Discussed</label>
    <type>Checkbox</type>
</CustomField>