force-app/main/default/objects/Case/fields/First_Follow_Up_Call__c.field-meta.xml
<CustomField>
    <fullName>First_Follow_Up_Call__c</fullName>
    <label>First Follow Up Call</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>