force-app/main/default/objects/Case/fields/Follow_up_call_customer_survey__c.field-meta.xml
<CustomField>
    <fullName>Follow_up_call_customer_survey__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If this case is a result of a request for a follow up call from the customer survey, check this box</description>
    <label>Follow up call-customer survey</label>
    <type>Checkbox</type>
</CustomField>