force-app/main/default/objects/Case/fields/Follow_up_call_Discretionary__c.field-meta.xml
<CustomField>
    <fullName>Follow_up_call_Discretionary__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If the I &amp; R staff determines that a follow up call is needed, check this box.</description>
    <label>Follow up call-Discretionary</label>
    <type>Checkbox</type>
</CustomField>