force-app/main/default/objects/Case/fields/Health_Barrier_Detail__c.field-meta.xml
<CustomField>
    <fullName>Health_Barrier_Detail__c</fullName>
    <inlineHelpText>Inaccessible- ability to identify, obtain and use the services; services do exist
Unacceptable- degree to which the service is congruent with educational level, cultural beliefs, and enhances the self-actualization of the person using it</inlineHelpText>
    <label>Health Barrier Detail</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Health_Barriers__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Unavailable</fullName>
            </value>
            <value>
                <fullName>Inaccessible- not open to PWBI</fullName>
            </value>
            <value>
                <fullName>Inaccessible- geographically/ physically</fullName>
            </value>
            <value>
                <fullName>Inappropriate- wrong location</fullName>
            </value>
            <value>
                <fullName>Inappropriate- provider unfamiliar w/ BI</fullName>
            </value>
            <value>
                <fullName>Inappropriate- wrong time</fullName>
            </value>
            <value>
                <fullName>Inappropriate- duration or intensity</fullName>
            </value>
            <value>
                <fullName>Unaffordable- lack of insurance</fullName>
            </value>
            <value>
                <fullName>Unaffordable- lack of coverage</fullName>
            </value>
            <value>
                <fullName>Unaffordable- lack of personal funds</fullName>
            </value>
            <value>
                <fullName>Unacceptable- self-determination</fullName>
            </value>
            <value>
                <fullName>Unacceptable- cultural competence</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>