force-app/main/default/objects/Case/fields/Health_Barriers__c.field-meta.xml
<CustomField>
    <fullName>Health_Barriers__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Health Barriers</label>
    <type>Checkbox</type>
</CustomField>