force-app/main/default/objects/Case/fields/Health_Not_Discussed__c.field-meta.xml
<CustomField>
    <fullName>Health_Not_Discussed__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Health Not Discussed</label>
    <type>Checkbox</type>
</CustomField>