force-app/main/default/objects/Case/fields/Housing_Barriers__c.field-meta.xml
<CustomField>
    <fullName>Housing_Barriers__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Housing Barriers</label>
    <type>Checkbox</type>
</CustomField>