force-app/main/default/objects/Case/fields/Housing_Not_Discussed__c.field-meta.xml
<CustomField>
    <fullName>Housing_Not_Discussed__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Housing Not Discussed</label>
    <type>Checkbox</type>
</CustomField>