force-app/main/default/objects/Case/fields/How_was_information_sent__c.field-meta.xml
<CustomField>
    <fullName>How_was_information_sent__c</fullName>
    <label>How was information sent?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>In Person</fullName>
            </value>
            <value>
                <fullName>Fax</fullName>
            </value>
            <value>
                <fullName>Mail</fullName>
            </value>
            <value>
                <fullName>Verbal info only</fullName>
            </value>
            <value>
                <fullName>Chat feature</fullName>
            </value>
            <value>
                <fullName>Text</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>