force-app/main/default/objects/Case/fields/If_other_please_describe__c.field-meta.xml
<CustomField>
    <fullName>If_other_please_describe__c</fullName>
    <label>If other, please describe</label>
    <length>250</length>
    <type>Text</type>
</CustomField>