force-app/main/default/objects/Case/fields/List_of_information_sent__c.field-meta.xml
<CustomField>
    <fullName>List_of_information_sent__c</fullName>
    <inlineHelpText>Use this field to list out what articles, websites, etc. were sent to the client by mail or fax. For emailed material, refer to email.</inlineHelpText>
    <label>List of information sent:</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>