force-app/main/default/objects/Case/fields/Lives_where__c.field-meta.xml
<CustomField>
    <fullName>Lives_where__c</fullName>
    <inlineHelpText>Where does the person reside at time of contact?</inlineHelpText>
    <label>Lives where</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Discussed</fullName>
                <default>true</default>
                <label>Not Discussed</label>
            </value>
            <value>
                <fullName>Apt/Condo</fullName>
                <label>Apt/Condo/House</label>
            </value>
            <value>
                <fullName>Assisted Living</fullName>
            </value>
            <value>
                <fullName>Hospital</fullName>
            </value>
            <value>
                <fullName>Skilled Nursing Facility</fullName>
            </value>
            <value>
                <fullName>Transitional Residential</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>