force-app/main/default/objects/Case/fields/Lives_with__c.field-meta.xml
<CustomField>
    <fullName>Lives_with__c</fullName>
    <inlineHelpText>Who does the person live with at time of contact?</inlineHelpText>
    <label>Lives with</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Discussed</fullName>
                <default>true</default>
                <label>Not Discussed</label>
            </value>
            <value>
                <fullName>Alone</fullName>
            </value>
            <value>
                <fullName>Caregiver</fullName>
            </value>
            <value>
                <fullName>Child-Adult</fullName>
            </value>
            <value>
                <fullName>Child-Minor</fullName>
            </value>
            <value>
                <fullName>Family-Other</fullName>
            </value>
            <value>
                <fullName>Friend</fullName>
            </value>
            <value>
                <fullName>Parent(s)</fullName>
            </value>
            <value>
                <fullName>Partner</fullName>
            </value>
            <value>
                <fullName>Spouse</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>